k8s/gateway/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: itsm-gateway
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: itsm-strip-api-prefix@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
    - http:
        paths:
          - path: /api/auth
            pathType: Prefix
            backend:
              service:
                name: auth-service
                port:
                  number: 3001
          - path: /api/tickets
            pathType: Prefix
            backend:
              service:
                name: ticket-service
                port:
                  number: 3002
          - path: /api/profiles
            pathType: Prefix
            backend:
              service:
                name: user-service
                port:
                  number: 3003
          - path: /api/teams
            pathType: Prefix
            backend:
              service:
                name: user-service
                port:
                  number: 3003
          - path: /api/notifications
            pathType: Prefix
            backend:
              service:
                name: notification-service
                port:
                  number: 3004
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
          - path: /api/files
            pathType: Prefix
            backend:
              service:
                name: file-service
                port:
                  number: 3005
